--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                                 <h4>Cafe Bless Roll</h4>
                                 <p class="tag">#Responsive #Renewal #HTML5 #CSS3 #jQuery</p>
                                 <p>
-                                    <strong>'카페 블레스롤' 웹사이트 리뉴얼</strong><br>
+                                    <strong><a href="BlessRoll/blessroll.html" target="_blank">'카페 블레스롤' 웹사이트 리뉴얼</a></strong><br>
                                     기존 블레스롤 홈페이지에서 쉽게 확인할 수 없었던 정보를 메인에 추가해 정보전달, 카페 홍보 목적으로 제작하였습니다.<br>
                                     Media Query를 사용하여 반응형 웹으로 제작하였습니다.<br>
                                     (기획, 디자인, 코딩 100%)
@@ -207,7 +207,7 @@
                                 </div> -->
                                 <p class="tag">#Responsive #HTML5 #CSS3 #jQuery #Bootstrap</p>
                                 <p>
-                                    <strong> 대림미술관  반응형 웹사이트</strong><br>
+                                    <strong><a href="daelim/index.html" target="_blank">대림미술관  반응형 웹사이트</a></strong><br>
                                     미술관에 대한 정보와
                                     '대림미술관 NICK KNIGHT : IMAGE . 닉 나이트 사진전 거침없이,아름답게' 전시에 대한<br> 정보 전달을 목적으로 제작하였습니다.<br>
                                     Media Query를 사용하여 반응형 웹으로 제작하였습니다.<br>
@@ -234,7 +234,7 @@
                                 <h4>STUDIO DRAGON</h4>
                                 <p class="tag">#Responsive #HTML5 #CSS3 #jQuery #Bootstrap</p>
                                 <p>
-                                    <strong>스튜디오드래곤 반응형 웹사이트</strong><br>
+                                    <strong><a href="studio-d/index.html" target="_blank">스튜디오드래곤 반응형 웹사이트</a></strong><br>
                                     드라마, 컨텐츠 제작 기업으로 기업정보와 작품 정보를 보여줄 수 있도록 제작하였습니다.<br>
                                     Media Query를 사용하여 반응형 웹으로 제작하였습니다.<br>
                                     (디자인, 코딩 100%)
@@ -256,7 +256,7 @@
                                 <h4>KIA EV6</h4>
                                  <p class="tag">#PC #HTML5 #CSS3 #jQuery</p>
                                 <p>
-                                    <strong>기아EV6 웹사이트</strong><br>
+                                    <strong><a href="kiaEV6/kia.html" target="_blank">기아EV6 웹사이트</a></strong><br>
                                     동영상을 활용해 역동적인 느낌 강조하고 모던하고 간결한 느낌으로 제작하였습니다.<br>
                                     (디자인, 코딩 100%)
                                 </p>
@@ -278,7 +278,7 @@
                                 <h4>SOFRAUM</h4>
                                  <p class="tag">#Responsive #HTML5 #CSS3 #jQuery #Bootstrap</p>
                                 <p>
-                                    <strong>소프라움 반응형 웹사이트</strong><br>
+                                    <strong><a href="sofraum/index.html" target="_blank">소프라움 반응형 웹사이트</a></strong><br>
                                     소프라움(SOFRAUM)은 부드러운 공간(Soft + Raum)이라는 의미의 구스 침구 전문 브랜드로<br> 부드러운 색감과 느낌을 살려 제작하였습니다.<br>
                                     Media Query를 사용하여 반응형 웹으로 제작하였습니다.<br>
                                     (디자인, 코딩 100%)
@@ -304,7 +304,7 @@
                                 <h4>hersteller</h4>
                                  <p class="tag">#PC #HTML5 #CSS3 #jQuery</p>
                                 <p>
-                                    <strong>허스텔러 웹사이트</strong><br>
+                                    <strong><a href="hersteller/hersteller.html" target="_blank">허스텔러 웹사이트</a></strong><br>
                                     기존 디자인 하드코딩 작업하였습니다.<br>
                                     (코딩 100%)                                
                                 </p>
@@ -325,7 +325,7 @@
                                 <h4>Saturn bath</h4>
                                  <p class="tag">#Responsive #HTML5 #CSS3 #jQuery #Bootstrap</p>
                                 <p>
-                                    <strong>새턴바스 반응형 웹사이트</strong><br>
+                                    <strong><a href="saturn/saturn.html" target="_blank">새턴바스 반응형 웹사이트</a></strong><br>
                                     기존 디자인 하드코딩 작업하였습니다.<br>
                                     (코딩 100%)
                                 </p>
@@ -399,7 +399,7 @@
                                                     <button id="startBtn">start</button>
                                                 </td>
                                                 <td class="alignRight">
-                                                    <span>score : <span id='score'>0</span>
+                                                    <span>score : <span id='score'>0</span></span>
                                                 </td>
                                             </tr>
                                         </table>
@@ -462,9 +462,9 @@
                                 <div class="jsCalendar">
                                     <table id="calendar">
                                         <tr> <!--labe은 마우스로 클릭을 편하게 해준다 -->
-                                            <td><label onclick="prevCalendar()" class="month-btn"> < </label></td>
+                                            <td><label onclick="prevCalendar()" class="month-btn"> &lt; </label></td>
                                             <td colspan="5" id="tbCalenderYM">yyyy년 m월</td>
-                                            <td><label onclick="nextCalendar()" class="month-btn"> > </label></td>
+                                            <td><label onclick="nextCalendar()" class="month-btn"> &gt; </label></td>
                                         </tr>
                                         <tr>
                                             <td class="sun">일</td>
@@ -769,11 +769,12 @@
         </footer>
         <!-- //footer -->
     </main>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+    <script src="script.js"></script>
+    <script>
+        buildCalendar();
+    </script>
 </body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
-<script src="script.js"></script>
-<script>
-    buildCalendar();
-</script>
+
 </html>
