--- a/BlessRoll/about.html
+++ b/BlessRoll/about.html
@@ -160,7 +160,7 @@
             </div>
 
             <div class="ifram-box">
-                <iframe name="my" style="width: 100%; height: 780px;" frameborder="0" marginwidth="20px" marginheight="20px" src="about-1.html"></iframe>
+                <iframe name="my" style="width: 100%; height: 780px;" src="about-1.html"></iframe>
             </div>
         </div>
     </section>  
@@ -196,8 +196,7 @@
         </div>
 
     </div>    
-</body>
-<!--스크립트-->
+    <!--스크립트-->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="com.js"></script>
 <script>
@@ -212,4 +211,6 @@ $(".list").click(function(){
     })
 
 </script>
+</body>
+
 </html>
