--- a/BlessRoll/blessroll.html
+++ b/BlessRoll/blessroll.html
@@ -247,7 +247,7 @@
                             <p>일상 속에서 즐기는 축복의 디저트</p>
                             <p>소중한 당신을 프리미엄 디저트 카페의 세계로 초대합니다</p>                              
                         </div>
-                        <button><a href="intro.html">자세히보기</a></button>
+                        <button type="button" onclick = "location.href = 'intro.html'">자세히보기</button>
                     </div>
                 </div>
                 <div class="box story-img">
@@ -544,7 +544,7 @@
                         <div class="icon"><a href="#"><i class="far fa-comment"></i></a></div>
                     </div>                    
                     <img src="images/insta6.jpg" alt="sns이미지">
-                    <img src="images/insta24.jpg" alt="sns이미지">
+                    <img src="images/insta23.jpg" alt="sns이미지">
                     <img src="images/insta5.jpg" alt="sns이미지">
                 </div>
                 <div class="item item-c item12">
@@ -598,9 +598,8 @@
             <img src="images/top-btn.png" alt="top버튼">
         </a>
     </div>
-</body>
 
-<!--스크립트-->
+    <!--스크립트-->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> 
 
 <!--aos-->
@@ -648,6 +647,6 @@ setInterval(function(){
     }
 },3000)
 
-
 </script>
+</body>
 </html>
