--- a/daelim/sub1-info.html
+++ b/daelim/sub1-info.html
@@ -357,7 +357,11 @@
             </div>
         </footer>
         <!-- //하단 -->  
+
+        <!--스크립트-->
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="comm.js"></script>
+        <!--//스크립트-->
 </body>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="comm.js"></script>
+
 </html>
