--- a/daelim/sub4-news.html
+++ b/daelim/sub4-news.html
@@ -213,7 +213,7 @@
                             <tr>
                                 <td>876</td>
                                 <td>디뮤지엄</td>
-                                <td>2021년 하반기, 대학 단체 <온라인 필드트립> 교육프로그램 안내</td>
+                                <td>2021년 하반기, 대학 단체 &lt;온라인 필드트립&gt; 교육프로그램 안내</td>
                                 <td>2021.09.27</td>
                             </tr>
                             <tr>
@@ -318,8 +318,11 @@
             </div>
         </footer>
         <!-- //하단 -->      
+
+        <!--스크립트-->
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="comm.js"></script>
+        <!--//스크립트-->
 </body>
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="comm.js"></script>
 </html>
