--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     </ul>
                     <div class="skill-other">
                         <h5> * 사용해 봤어요</h5>
-                        <p>Java, Python, Database, Swift, Android studio</p>
+                        <p>Java, Python, Database</p>
                     </div>
                     
                 </article>
